Adicionei uma descricao textual de cada hand, falta adicionar a esta descricao o caso de empate, ou sea, o kicker. Coloquei como sugestao o calculo do valor do flush, mas se quiser colocar o metodo com o if que voce falou tranquilo, talvez fique ate mais facil.